JastAddExtensions/JastAddModules/module_tests/ERROR_INCOMPATIBLE_REPLACE/m1.module
module m1;
import own m2;
import own m3;
import own m4int;
import own m4wint;

replace m4int with m3; //error
replace m4wint with m3; //error
export package *;
